[gd_scene load_steps=13 format=2]

[ext_resource path="res://Store.gd" type="Script" id=1]
[ext_resource path="res://PTSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Rajdhani-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://locked_btn.png" type="Texture" id=4]
[ext_resource path="res://back_btn.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[node name="Store" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 136.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "store"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Balance" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -368.892
margin_top = 37.4577
margin_right = -55.8917
margin_bottom = 79.4577
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="."]
margin_left = 80.9086
margin_top = 209.763
margin_right = 883.909
margin_bottom = 399.763
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RapidRolling" type="HBoxContainer" parent="ItemList"]
margin_right = 803.0
margin_bottom = 70.0
custom_constants/separation = 50
alignment = 1

[node name="Name" type="Label" parent="ItemList/RapidRolling"]
margin_left = 203.0
margin_top = 14.0
margin_right = 370.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rapid Rolling"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="TextureButton" parent="ItemList/RapidRolling"]
margin_left = 420.0
margin_right = 599.0
margin_bottom = 70.0
texture_normal = ExtResource( 4 )

[node name="EarlyBoost" type="HBoxContainer" parent="ItemList"]
margin_top = 74.0
margin_right = 803.0
margin_bottom = 144.0
custom_constants/separation = 50
alignment = 1

[node name="Name" type="Label" parent="ItemList/EarlyBoost"]
margin_left = 214.0
margin_top = 14.0
margin_right = 360.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Early Boost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="TextureButton" parent="ItemList/EarlyBoost"]
margin_left = 410.0
margin_right = 589.0
margin_bottom = 70.0
texture_normal = ExtResource( 4 )

[node name="OrderConfirm" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -277.0
margin_top = -63.5
margin_right = 277.0
margin_bottom = 63.5
theme = SubResource( 5 )
window_title = "Confirm"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -201.0
margin_top = -57.0
margin_right = 201.0
margin_bottom = 57.0
theme = SubResource( 7 )
window_title = "Store"
dialog_autowrap = true

[node name="BackBtn" type="TextureButton" parent="."]
margin_left = 860.371
margin_top = 511.143
margin_right = 1116.37
margin_bottom = 639.143
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="ItemList/RapidRolling/Price" to="." method="_on_Price_button_down" binds= [ "rapid_rolling" ]]
[connection signal="button_down" from="ItemList/EarlyBoost/Price" to="." method="_on_Price_button_down" binds= [ "early_boost" ]]
[connection signal="confirmed" from="OrderConfirm" to="." method="_on_OrderConfirm_confirmed"]
[connection signal="button_down" from="BackBtn" to="." method="_on_BackBtn_button_down"]
